footer fixed and alignment fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
 	background-color: #ffffff;
+	margin: 0 auto;
 	width: 1366px;
-	height: 286px;
 	margin-top: 20px;
 }
 
@@ -9,19 +9,22 @@ nav {
 	background-color: #e1f1f7;
 	margin: 0;
 	margin-bottom: 20px;
+
 }
 
 nav ul {
 	padding: 0 15px;
-
+	margin: 0 auto;
 }
+
 
 nav li {
 	list-style: none;
-	display: inline;
+	display: inline-block;
 	margin-left: 10px;
 	border-right: 2px solid black;
 	padding-right: 10px;
+	line-height: 30px;
 }
 
 nav li:first-child { /*nth-child(), nth-child()*/
@@ -51,13 +54,22 @@ nav img {
 	height: 590px;
 	position: relative;
 	padding: 0;
+	width: 100%;
 }
+
 
 #service-box {
 	background-color: #e1f1f7;
 	height: 380px;
 }
 
+footer ul{
+	margin: 0 auto;
+	width: 200px;
+	padding-top: 20px;
+	margin-bottom: 18px;
+
+}
 footer li {
 	list-style: none;
 	display:inline;
@@ -68,9 +80,10 @@ footer img {
 	height: 30px;
 }
 
-
-
-
+footer li:first-child img {
+	width: 40px;
+	height: 30px;
+}
 
 #triangle-nav {
 	padding: 0 10px;
@@ -92,6 +105,12 @@ footer img {
 	margin-left: 25px;
 	margin-right: 25px;
 	margin-top: 20px;
+	opacity: 0.4;
+}
+
+#scenic-flight:hover {
+	opacity: 0;
+    cursor: pointer;
 }
 
 main section h2 {
@@ -141,7 +160,7 @@ main section p a {
 
 .slides {
     padding: 0;
-    width: 1366px;
+    width: 100%;
     height: 550px;
     display: block;
     margin: 0 auto;
@@ -160,7 +179,7 @@ main section p a {
 .slide {
     top: 0;
     opacity: 0;
-    width: 1366px;
+    width: 100%;
     height: 550px;
     display: block;
     position: absolute;
